profilelist1exp/unpackaged/objects/Onsite_Vendor_Resource__c.object
<CustomObject>
    <description>Quarterly and Yearly business planning for Partner Business Plan - Marketing intitiative, Rebates Funded heads etc (Account Plan for Partner)</description>
    <fields>
        <fullName>Incentive__c</fullName>
        <label>Incentive</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onsite_Vendor_Resource__c</fullName>
        <label>Onsite Vendor Resource</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Business_Enablement__c</fullName>
        <label>Partner Business Enablement</label>
        <referenceTo>Partner_Business_Enablement__c</referenceTo>
        <relationshipName>Demand_Generation_Onsite_Vendor_Resource</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <label>Timeframe</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Onsite Vendor Resource</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OVR-{00000000}</displayFormat>
        <label>OVR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onsite Vendor Resource</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>